@@ -38,26 +38,6 @@ EditSystem::EditSystem(DvtConfig *c,QWidget *parent)
   //
   setMinimumSize(sizeHint());
 
-  /*
-  //
-  // SMTP Settings
-  //
-  edit_smtp_group=new QGroupBox(tr("SMTP Server Settings"),this);
-  edit_smtp_group->setFont(labelFont());
-  edit_smtp_hostname_edit=new QLineEdit(edit_smtp_group);
-  edit_smtp_hostname_edit->setFont(defaultFont());
-  edit_smtp_hostname_edit->setMaxLength(255);
-  edit_smtp_hostname_label=new QLabel(tr("Hostname")+":",edit_smtp_group);
-  edit_smtp_hostname_label->setFont(labelFont());
-  edit_smtp_hostname_label->setAlignment(Qt::AlignLeft);
-  
-  edit_smtp_port_spin=new QSpinBox(edit_smtp_group);
-  edit_smtp_port_spin->setFont(defaultFont());
-  edit_smtp_port_spin->setRange(0,0xFFFF);
-  edit_smtp_port_label=new QLabel("Port:",edit_smtp_group);
-  edit_smtp_port_label->setFont(labelFont());
-  edit_smtp_port_label->setAlignment(Qt::AlignLeft);
-  */
   //
   // Originating Email Address
   //
@@ -148,9 +128,7 @@ int EditSystem::exec()
     "`ORIGIN_EMAIL`,"+              // 00
     "`ALERT_EMAIL`,"+               // 01
     "`AFFIDAVIT_EMAIL_SUBJECT`,"+   // 02
-    "`AFFIDAVIT_EMAIL_TEMPLATE`,"+  // 03
-    "`SMTP_HOSTNAME`,"+             // 04
-    "`SMTP_PORT` "+                 // 05
+    "`AFFIDAVIT_EMAIL_TEMPLATE` "+  // 03
     "from `SYSTEM`";
   DvtSqlQuery *q=new DvtSqlQuery(sql);
   if(q->first()) {
@@ -158,8 +136,6 @@ int EditSystem::exec()
     edit_alert_email_edit->setText(q->value(1).toString());
     edit_affidavit_subject_edit->setText(q->value(2).toString());
     edit_affidavit_template_edit->setText(q->value(3).toString());
-    //    edit_smtp_hostname_edit->setText(q->value(4).toString());
-    //    edit_smtp_port_spin->setValue(q->value(5).toInt());
   }
   delete q;  
 
@@ -193,8 +169,6 @@ void EditSystem::okData()
     DvtSqlQuery::escape(edit_affidavit_subject_edit->text())+","+
     "`AFFIDAVIT_EMAIL_TEMPLATE`="+
     DvtSqlQuery::escape(edit_affidavit_template_edit->toPlainText())+" ";
-    //    "`SMTP_HOSTNAME`="+DvtSqlQuery::escape(edit_smtp_hostname_edit->text())+","+
-    //    QString::asprintf("`SMTP_PORT`=%d ",edit_smtp_port_spin->value());
   DvtSqlQuery::apply(sql);
 
   done(true);
@@ -211,13 +185,7 @@ void EditSystem::resizeEvent(QResizeEvent *e)
 {
   int w=size().width();
   int h=size().height();
-  /*
-  edit_smtp_group->setGeometry(15,5,w-30,46);
-  edit_smtp_hostname_label->setGeometry(10,27,65,20);
-  edit_smtp_hostname_edit->setGeometry(80,22,w-250,20);
-  edit_smtp_port_label->setGeometry(w-135,27,30,20);
-  edit_smtp_port_spin->setGeometry(w-100,22,60,20);
-  */
+
   edit_origin_email_label->setGeometry(15,5,w-25,18);
   edit_origin_email_edit->setGeometry(10,20,w-20,20);
   edit_alert_email_label->setGeometry(15,52,w-25,18);
@@ -226,7 +194,6 @@ void EditSystem::resizeEvent(QResizeEvent *e)
   edit_affidavit_subject_edit->setGeometry(10,114,w-20,20);
   edit_affidavit_template_label->setGeometry(15,145,w-25,18);
   edit_affidavit_template_edit->setGeometry(10,160,w-20,h-227);
-
   edit_key_label->setGeometry(25,h-60,w-145,60);
   edit_test_button->setGeometry(w-310,h-40,150,30);
   edit_ok_button->setGeometry(w-140,h-40,60,30);
